--- a/1-EntradaSalida/EntradaSalida-5.html
+++ b/1-EntradaSalida/EntradaSalida-5.html
@@ -27,7 +27,7 @@
 				
 				
 			</form>
-			<button  class="MiBotonUTN" onclick="Mostar()" >Mostar</button>
+			<button  class="MiBotonUTN" onclick="Mostrar()" >Mostar</button>
 		</div>
 
 		<div class="CajaEnunciado animated bounceInLeft">
