--- a/8-TPs/AdivinaElNumero1.html
+++ b/8-TPs/AdivinaElNumero1.html
@@ -15,7 +15,7 @@
 		
 
 		</head>
-	<body>
+	<body onload="comenzar()">
 		<div class="CajaUno animated bounceInDown">
 			
 		
@@ -32,7 +32,7 @@
 			
 		<button style="height:5em;"  class="MiBotonUTN"  onclick="verificar()" >Verificar</button>
 			
-			<button  class="MiBotonUTN" onclick="comenzar()" >Comenzar</button>
+			<!--<button  class="MiBotonUTN" onclick="comenzar()" >Comenzar</button>-->
 
 		</div>
 
